--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "kuromoji": "^0.1.2",
     "lucide-react": "^0.544.0",
+    "path-browserify": "^1.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "sqlite3": "^5.1.7"
