--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "kuromoji": "^0.1.2",
     "lucide-react": "^0.544.0",
+    "multer": "^2.0.2",
     "path-browserify": "^1.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
